--- a/syte/templates/base.html
+++ b/syte/templates/base.html
@@ -5,7 +5,7 @@
   <meta name="description" content="Personal website and blog of someone known as Mikaelo. Follow him at @umike" />
   <meta name="keywords" content="Mikaelo (Aventuristo), developer, entrepreneur, someone who love esperanto, wasteland and fallout. And why I am not traveling now?" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>{% block pagetitle %}Rigo [Rodrigo Neri]{% endblock %}</title>
+  <title>{% block pagetitle %}Mikaelo [Mikhail Ushanov]{% endblock %}</title>
   <!--[if lt IE 9]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
   {% if DEV_DEPLOYMENT_MODE %}
   <link rel="stylesheet/less" type="text/css" href="{{ MEDIA_URL }}less/styles.less">
